# sing-a-bot-of-harmony

./: README.md  lambda_function.py  setup.cfg
.github/workflows/: deploy.yml
ops/: likes.py  parse_theaters.py
src/harmonizer_bot/: birth_date.py  blocks.py  contents.py  core.py  date.py  datetime.py  fetchers.py  schedules.py
src/harmonizer_bot/contents/: __init__.py  base.py  birthday.py  events.py  goods.py  greetings.py  mixins.py  resources.py  theaters.py
src/harmonizer_bot/experimental/: numbers.py
tests/: test_lambda_function.py  test_theater_contents.py
tests/harmonizer_bot/: test_birth_date.py  test_blocks.py  test_contents.py  test_core.py  test_date.py  test_datetime.py  test_schedules.py
tests/harmonizer_bot/contents/: support.py  test_birthday.py  test_events.py  test_goods.py  test_greetings.py  test_mixins.py  test_theaters.py
