[metadata]
name = harmonizer_bot
version = 0.1
description = 約束の呟き、届けます
author = nikkie
author_email = takuyafjp+develop@gmail.com
uri = https://github.com/ftnext/sing-a-bot-of-harmony
license = MIT

[options]
package_dir =
    =src
packages=find:
install_requires =
    sparkling-counter@git+https://github.com/ftnext/anime-fan-python@sparkling-counter/1.1.0a1#egg=sparkling-counter&subdirectory=x-days-anniversary

[options.packages.find]
where=src
